--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Song_Chords</string>
+    <string name="app_name">ChordSong</string>
     <string name="title_activity_song">SongActivity</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
